--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <link rel="stylesheet" href="./src/styles/main.scss">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <!-- <div id="app"></div> -->
+     <h1>Dickhead</h1>
+    <script type="module" src="/src/scripts/main.ts"></script>
   </body>
 </html>
