--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -1,15 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-    <link rel="stylesheet" href="./src/styles/main.scss">
-  </head>
-  <body>
-    <!-- <div id="app"></div> -->
-     <h1>Dickhead</h1>
-    <script type="module" src="/src/scripts/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="FILL THIS OUT-----------">
+  <title>Eventura | FILL THIS OUT </title>
+  <!-- Google fonts import -->
+  <!-- FILL THIS OUT WITH IMPORT -->
+  <!-- Fontawesome import -->
+  <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap CSS import -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="./src/styles/main.scss">
+</head>
+
+<body>
+  <header>
+  </header>
+
+  <main>
+  </main>
+
+  <footer>
+  </footer>
+  <!-- Bootstrap import -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
+  <!-- TS script -->
+  <script type="module" src="/src/scripts/main.ts"></script>
+</body>
+
 </html>
