--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -19,6 +19,23 @@
 
 <body>
   <header>
+    <!-- Bootstrap navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Eventura Logo</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Sign in</a>
+            <a class="nav-link active" aria-current="page" href="#">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <main>
