--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -39,9 +39,37 @@
   </header>
 
   <main>
+    <section>
+      <h1>Test</h1>
+    </section>
   </main>
 
-  <footer>
+  <footer class="footer">
+    <hr />
+    <div class="container">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-evenly">
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"
+            aria-label="Open facebook in a new tab"><i class="fa-brands fa-facebook footer__icon"></i></a>
+          <a href="https://x.com/" target="_blank" rel="noopener noreferrer" aria-label="Open twitter in a new tab"><i
+              class="fa-brands fa-twitter footer__icon"></i></a>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"
+            aria-label="Open instagram in a new tab"><i class="fa-brands fa-instagram footer__icon"></i></a>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <div class="container">
+      <div class="row justify-content-center mt-2">
+        <div class="col-12 col-md-6 text-center mt-2">
+          <p class="subheading">CONTACT</p>
+          <p>Email: Eventura@email.com</p>
+          <p>Phone: 020712345678</p>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <p class="text-center">&copy; 2025 Eventura. All rights reserved. Created by Alex, James and Purbai</p>
   </footer>
   <!-- Bootstrap import -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
