Style(frontend-index): navbar

--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -29,9 +29,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link active" aria-current="page" href="#">Sign in</a>
-            <a class="nav-link active" aria-current="page" href="#">Sign up</a>
+            <a class="navbar-nav__link" aria-current="page" href="#">Home</a>
+            <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
+            <a class="navbar-nav__link" aria-current="page" href="#">Sign up</a>
           </div>
         </div>
       </div>
