--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -8,7 +8,11 @@
   <meta name="description" content="FILL THIS OUT-----------">
   <title>Eventura | FILL THIS OUT </title>
   <!-- Google fonts import -->
-  <!-- FILL THIS OUT WITH IMPORT -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <!-- Fontawesome import -->
   <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
   <!-- Bootstrap CSS import -->
