Fix(frontend-nav): hover underline across screen bug

--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -32,11 +32,19 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="navbar-nav__link" aria-current="page" href="#">Home</a>
-            <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
-            <a class="navbar-nav__link" aria-current="page" href="#">Sign up</a>
-          </div>
+          <!-- <div class="navbar-nav"> -->
+            <ul class="navbar-nav">
+              <li class="navbar-nav__list">
+              <a class="navbar-nav__link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="navbar-nav__list">
+              <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
+              </li>
+              <li class="navbar-nav__list">
+              <a class="navbar-nav__link" aria-current="page" href="#">Sign up</a>
+              </li>
+            </ul>
+          <!-- </div> -->
         </div>
       </div>
     </nav>
