--- a/frontend_eventura/src/pages/profile.html
+++ b/frontend_eventura/src/pages/profile.html
@@ -33,20 +33,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <!-- <div class="navbar-nav"> -->
-          <ul class="navbar-nav">
-            <li class="navbar-nav__list">
+            <ul class="navbar-nav">
+              <li class="navbar-nav__list">
               <a class="navbar-nav__link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="navbar-nav__list">
+              </li>
+              <li class="navbar-nav__list">
               <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
-            </li>
-            <li class="navbar-nav__list">
+              </li>
+              <li class="navbar-nav__list">
               <a class="navbar-nav__link" aria-current="page" href="#">Sign up</a>
-            </li>
-            <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="./src/pages/profile">Profile</a>
-            </li>
-          </ul>
+              </li>
+              <li class="navbar-nav__list">
+              <a class="navbar-nav__link" aria-current="page" href="./profile.html">Profile</a>
+              </li>
+            </ul>
           <!-- </div> -->
         </div>
       </div>
@@ -55,7 +55,12 @@
 
   <main>
     <section>
-      <h1>Test</h1>
+        <h1>PROFILE PAGE</h1>
+        <!-- Contain user information -->
+        <div id="userInfoDiv"></div>
+        <!-- Contain user events -->
+        <div id="userEventsDiv"></div>
+        
     </section>
   </main>
 
