--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -26,7 +26,7 @@
     <!-- Bootstrap navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Eventura Logo</a>
+        <a class="navbar-brand" href="./index.html">Eventura Logo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
           <!-- <div class="navbar-nav"> -->
           <ul class="navbar-nav">
             <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="#">Home</a>
+              <a class="navbar-nav__link" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="navbar-nav__list">
               <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
