--- a/frontend_eventura/src/pages/profile.html
+++ b/frontend_eventura/src/pages/profile.html
@@ -26,28 +26,26 @@
     <!-- Bootstrap navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Eventura Logo</a>
+        <a class="navbar-brand" href="../../index.html">Eventura Logo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <!-- <div class="navbar-nav"> -->
-            <ul class="navbar-nav">
-              <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="navbar-nav__list">
+          <ul class="navbar-nav">
+            <li class="navbar-nav__list">
+              <a class="navbar-nav__link" aria-current="page" href="../../index.html">Home</a>
+            </li>
+            <li class="navbar-nav__list">
               <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
-              </li>
-              <li class="navbar-nav__list">
+            </li>
+            <li class="navbar-nav__list">
               <a class="navbar-nav__link" aria-current="page" href="#">Sign up</a>
-              </li>
-              <li class="navbar-nav__list">
+            </li>
+            <li class="navbar-nav__list">
               <a class="navbar-nav__link" aria-current="page" href="./profile.html">Profile</a>
-              </li>
-            </ul>
-          <!-- </div> -->
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -55,12 +53,12 @@
 
   <main>
     <section>
-        <h1>PROFILE PAGE</h1>
-        <!-- Contain user information -->
-        <div id="userInfoDiv"></div>
-        <!-- Contain user events -->
-        <div id="userEventsDiv"></div>
-        
+      <h1>PROFILE PAGE</h1>
+      <!-- Contain user information -->
+      <div id="userInfoDiv"></div>
+      <!-- Contain user events -->
+      <div id="userEventsDiv"></div>
+
     </section>
   </main>
 
