added login/sign-up pages

--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -38,10 +38,10 @@
               <a class="navbar-nav__link" aria-current="page" href="#">Home</a>
               </li>
               <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
+              <a class="navbar-nav__link" aria-current="page" href="./login.html">Sign in</a>
               </li>
               <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="#">Sign up</a>
+              <a class="navbar-nav__link" aria-current="page" href="./signup.html">Sign up</a>
               </li>
             </ul>
           <!-- </div> -->
