--- a/frontend_eventura/src/pages/profile.html
+++ b/frontend_eventura/src/pages/profile.html
@@ -22,34 +22,35 @@
 </head>
 
 <body>
-  <header>
-    <!-- Bootstrap navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">Eventura Logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <ul class="navbar-nav">
-            <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="../../index.html">Home</a>
-            </li>
-            <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="#">Sign in</a>
-            </li>
-            <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="#">Sign up</a>
-            </li>
-            <li class="navbar-nav__list">
-              <a class="navbar-nav__link" aria-current="page" href="./profile.html">Profile</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+    <header>
+        <!-- Bootstrap navbar -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">Eventura Logo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <ul class="navbar-nav">
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="../../index.html">Home</a>
+                        </li>
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="./login.html">Sign in</a>
+                        </li>
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="./signup.html">Sign up</a>
+                        </li>
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="./profile">Profile</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
   <main>
     <section>
