--- a/frontend_eventura/events.html
+++ b/frontend_eventura/events.html
@@ -25,25 +25,33 @@
 <body>
   <header>
   
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Eventura Logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="navbar-nav__link nav-link" href="/index.html">Home</a>
-            <a class="navbar-nav__link nav-link" href="/login.html">Sign in</a>
-            <a class="navbar-nav__link nav-link" href="/signup.html">Sign up</a>
-            <a class="navbar-nav__link nav-link active" aria-current="page" href="/events.html">Events</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </header>
+       <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">Eventura Logo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <ul class="navbar-nav">
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="./login.html">Sign in</a>
+                        </li>
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="./signup.html">Sign up</a>
+                        </li>
+                        <li class="navbar-nav__list">
+                            <a class="navbar-nav__link" aria-current="page" href="./src/pages/profile">Profile</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
   <main class="container py-4">
     <section class="row g-4">
