--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="FILL THIS OUT-----------">
-  <title>Eventura | FILL THIS OUT </title>
+  <meta name="description" content="The home page of the eventura website. Browse listings of all our amazing events!">
+  <title> Eventura | Home </title>
   <!-- Google fonts import -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,6 @@
   <!-- Bootstrap CSS import -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <link rel="stylesheet" href="./src/styles/main.scss">
 </head>
 
 <body>
@@ -47,7 +46,6 @@
               <a class="navbar-nav__link" aria-current="page" href="./src/pages/profile">Profile</a>
             </li>
           </ul>
-          <!-- </div> -->
         </div>
       </div>
     </nav>
