--- a/frontend_eventura/src/pages/events.html
+++ b/frontend_eventura/src/pages/events.html
@@ -6,21 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Create and manage events with Eventura." />
   <title>Eventura | Events</title>
-
-  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<!-- Google fonts import -->
 
-
+<!-- Fontawesome import -->
   <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
 
-
+<!-- BS import -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
-
-  <link rel="stylesheet" href="/src/styles/main.scss">
+  <!-- <link rel="stylesheet" href="/src/styles/main.scss"> -->
 </head>
 <body>
   <header>
@@ -171,6 +168,7 @@
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
       <!-- TS entry (Vite) -->
-  <script type="module" src="./src/scripts/events.ts"></script>
+  <script type="module" src="../scripts/events.ts"></script>
+  <script type="module" src="../scripts/main.ts"></script>
 </body>
 </html>
