--- a/frontend_eventura/src/pages/profile.html
+++ b/frontend_eventura/src/pages/profile.html
@@ -18,7 +18,6 @@
   <!-- Bootstrap CSS import -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <link rel="stylesheet" href="./src/styles/main.scss">
 </head>
 
 <body>
@@ -95,7 +94,7 @@
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
     crossorigin="anonymous"></script>
   <!-- TS script -->
-  <script type="module" src="/src/scripts/main.ts"></script>
+  <script type="module" src="../scripts/main.ts"></script>
 </body>
 
 </html>
