fixing structure issues within the code

--- a/frontend_eventura/src/pages/login/index.html
+++ b/frontend_eventura/src/pages/login/index.html
@@ -32,23 +32,48 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <ul class="navbar-nav">
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./login.html">Sign in</a>
-                        </li>
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./signup.html">Sign up</a>
-                        </li>
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./profile.html">Profile</a>
-                        </li>
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./events.html">Events</a>
-                        </li>
-                    </ul>
+               <ul class="navbar-nav">
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../../../index.html"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./index.html"
+                                    >Sign in</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../../pages/signup/index.html"
+                                    >Sign up</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../../pages/profile/index.html"
+                                    >Profile</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../events/index.html"
+                                    >Events</a
+                                >
+                            </li>
+                        </ul>
                 </div>
             </div>
         </nav>
@@ -104,7 +129,7 @@
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
     <!-- TS script -->
-    <script type="module" src="../scripts/login.ts"></script>
+    <script type="module" src="./../../scripts/login.ts"></script>
 </body>
 
 </html>
