--- a/frontend_eventura/src/pages/events/index.html
+++ b/frontend_eventura/src/pages/events/index.html
@@ -1,25 +1,37 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Create and manage events with Eventura." />
-  <title>Eventura | Events</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<!-- Google fonts import -->
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Create and manage events with Eventura."
+        />
+        <title>Eventura | Events</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+            rel="stylesheet"
+        />
+        <!-- Google fonts import -->
 
-<!-- Fontawesome import -->
-  <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
+        <!-- Fontawesome import -->
+        <script
+            src="https://kit.fontawesome.com/d51c017cc6.js"
+            crossorigin="anonymous"
+        ></script>
 
-<!-- BS import -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="/src/styles/main.scss"> -->
-</head>
+        <!-- BS import -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+            crossorigin="anonymous"
+        />
+        <!-- <link rel="stylesheet" href="/src/styles/main.scss"> -->
+    </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -47,7 +59,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./index.html"
+                                    href="./../../../index.html"
                                     >Home</a
                                 >
                             </li>
@@ -55,7 +67,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./login.html"
+                                    href="./../../pages/login/index.html"
                                     >Sign in</a
                                 >
                             </li>
@@ -63,7 +75,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./signup.html"
+                                    href="./../../pages/signup/index.html"
                                     >Sign up</a
                                 >
                             </li>
@@ -71,7 +83,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./src/pages/profile"
+                                    href="./../../pages/profile/index.html"
                                     >Profile</a
                                 >
                             </li>
@@ -79,7 +91,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./events.html"
+                                    href="./index.html"
                                     >Events</a
                                 >
                             </li>
@@ -326,69 +338,7 @@
             crossorigin="anonymous"
         ></script>
 
-              <div class="mb-3">
-                <label for="noOfEventDates" class="form-label"># of event dates</label>
-                <input id="noOfEventDates" class="form-control" type="number" min="1" />
-              </div>
-
-              <div class="d-flex gap-2">
-                <button class="btn btn-primary" type="submit">Create event</button>
-                <button class="btn btn-outline-secondary" type="button" id="resetForm">Reset</button>
-              </div>
-              <p class="mt-2 small" id="formMessage" aria-live="polite"></p>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-12 col-lg-6">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="h4 mb-3">All events</h2>
-            <div id="eventsList" class="d-grid gap-3"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer mt-5">
-    <hr />
-    <div class="container">
-      <div class="row">
-        <div class="col-12 d-flex justify-content-evenly">
-          <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Open facebook in a new tab">
-            <i class="fa-brands fa-facebook footer__icon"></i>
-          </a>
-          <a href="https://x.com/" target="_blank" rel="noopener noreferrer" aria-label="Open twitter in a new tab">
-            <i class="fa-brands fa-twitter footer__icon"></i>
-          </a>
-          <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Open instagram in a new tab">
-            <i class="fa-brands fa-instagram footer__icon"></i>
-          </a>
-        </div>
-      </div>
-    </div>
-    <hr />
-    <div class="container">
-      <div class="row justify-content-center mt-2">
-        <div class="col-12 col-md-6 text-center mt-2">
-          <p class="subheading">CONTACT</p>
-          <p>Email: Eventura@email.com</p>
-          <p>Phone: 020712345678</p>
-        </div>
-      </div>
-    </div>
-    <hr />
-    <p class="text-center">&copy; 2025 Eventura. All rights reserved. Created by Alex, James and Purbai</p>
-  </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-
-      <!-- TS entry (Vite) -->
-  <script type="module" src="../scripts/events.ts"></script>
-  <script type="module" src="../scripts/main.ts"></script>
-</body>
+        <!-- TS entry (Vite) -->
+        <script type="module" src="./../../scripts/events.ts"></script>
+    </body>
 </html>
