--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -41,12 +41,12 @@
                         class="collapse navbar-collapse"
                         id="navbarNavAltMarkup"
                     >
-                        <ul class="navbar-nav">
+                     <ul class="navbar-nav">
                             <li class="navbar-nav__list">
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./index.html"
+                                    href="./../../../index.html"
                                     >Home</a
                                 >
                             </li>
@@ -54,7 +54,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./login.html"
+                                    href="./../../pages/login/index.html"
                                     >Sign in</a
                                 >
                             </li>
@@ -62,7 +62,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./signup.html"
+                                    href="./index.html"
                                     >Sign up</a
                                 >
                             </li>
@@ -70,7 +70,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./src/pages/profile"
+                                    href="./../../pages/profile/index.html"
                                     >Profile</a
                                 >
                             </li>
@@ -78,7 +78,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./events.html"
+                                    href="./../events/index.html"
                                     >Events</a
                                 >
                             </li>
@@ -258,7 +258,7 @@
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
     <!-- TS script -->
-    <script type="module" src="../scripts/signup.ts"></script>
+    <script type="module" src="./../../scripts/signup.ts"></script>
 </body>
 
 </html>
