Add(frontend): vite config pages rollup options

--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -98,7 +98,7 @@
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
     <!-- TS script -->
-    <script type="module" src="./../scripts/bookings.ts"></script>
+    <script type="module" src="./../../scripts/bookings.ts"></script>
 </body>
 
 </html>
