--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -57,7 +57,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="/"
+                                    href="./index.html"
                                     >Home</a
                                 >
                             </li>
