managing event bookins from the front-end for a user, and storing the user id in local

--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -81,8 +81,8 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./src/pages/profile/index.html"
-                                    >Profile</a
+                                    href="./src/pages/bookings/index.html"
+                                    >Bookings</a
                                 >
                             </li>
                             <li class="navbar-nav__list">
