--- a/frontend_eventura/src/pages/profile/index.html
+++ b/frontend_eventura/src/pages/profile/index.html
@@ -79,8 +79,8 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./index.html"
-                                    >Profile</a
+                                    href="./../bookings/index.html"
+                                    >Booking</a
                                 >
                             </li>
                             <li class="navbar-nav__list">
