--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -70,8 +70,8 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./../../pages/profile/index.html"
-                                    >Profile</a
+                                    href="./../../pages/bookings/index.html"
+                                    >Bookings</a
                                 >
                             </li>
                             <li class="navbar-nav__list">
