--- a/frontend_eventura/src/pages/events/index.html
+++ b/frontend_eventura/src/pages/events/index.html
@@ -45,7 +45,7 @@
                 <a class="navbar-nav__link" aria-current="page" href="./../../pages/signup/index.html">Sign up</a>
               </li>
               <li class="navbar-nav__list">
-                <a class="navbar-nav__link" aria-current="page" href="./../../pages/profile/index.html">Profile</a>
+                <a class="navbar-nav__link" aria-current="page" href="./../../pages/bookings/index.html">Bookings</a>
               </li>
               <li class="navbar-nav__list">
                 <a class="navbar-nav__link" aria-current="page" href="./index.html">Events</a>
