added redirection of pages when first pages is load, after login/signup to show events or/and booked events

--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -101,9 +101,10 @@
         </header>
 
         <main>
-            <section>
-                <h1>Test</h1>
-            </section>
+            <div class="events">
+                <h1 class="events__title">Our upcoming Events</h1>
+                <section class="events__grid"></section>
+            </div>
         </main>
 
         <footer class="footer">
