--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -1,105 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="See your eventura bookings here!" />
+        <title>Eventura | Bookings</title>
+        <!-- Google fonts import -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- Fontawesome import -->
+        <script
+            src="https://kit.fontawesome.com/d51c017cc6.js"
+            crossorigin="anonymous"
+        ></script>
+        <!-- Bootstrap CSS import -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./src/styles/main.scss" />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="See your eventura bookings here!" />
-    <title>Eventura | Bookings</title>
-    <!-- Google fonts import -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <!-- Fontawesome import -->
-    <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS import -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./src/styles/main.scss" />
-</head>
+    <body>
+        <header>
+            <!-- Bootstrap navbar -->
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html"
+                        >Eventura Logo</a
+                    >
+                    <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div
+                        class="collapse navbar-collapse"
+                        id="navbarNavAltMarkup"
+                    >
+                        <ul class="navbar-nav">
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../../../index.html"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../login/index.html"
+                                    >Sign in</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../signup/index.html"
+                                    >Sign up</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./index.html"
+                                    >Bookings</a
+                                >
+                            </li>
+                            <li class="navbar-nav__list">
+                                <a
+                                    class="navbar-nav__link"
+                                    aria-current="page"
+                                    href="./../events/index.html"
+                                    >Events</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
-<body>
-    <header>
-        <!-- Bootstrap navbar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">Eventura Logo</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <ul class="navbar-nav">
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../../../index.html">Home</a>
-                        </li>
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../login/index.html">Sign in</a>
-                        </li>
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../signup/index.html">Sign up</a>
-                        </li>
-                        <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./index.html">Bookings</a>
-                        </li>
-                    </ul>
+        <main>
+            <div class="events">
+                <h1 class="events__title">Future Events</h1>
+                <section class="events__grid"></section>
+            </div>
+            <div class="booked">
+                <h1 class="booked__title">My Booked Events</h1>
+                <section class="booked__grid"></section>
+            </div>
+        </main>
+
+        <footer class="footer">
+            <hr />
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-evenly">
+                        <a
+                            href="https://www.facebook.com/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            aria-label="Open facebook in a new tab"
+                            ><i class="fa-brands fa-facebook footer__icon"></i
+                        ></a>
+                        <a
+                            href="https://x.com/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            aria-label="Open twitter in a new tab"
+                            ><i class="fa-brands fa-twitter footer__icon"></i
+                        ></a>
+                        <a
+                            href="https://www.instagram.com/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            aria-label="Open instagram in a new tab"
+                            ><i class="fa-brands fa-instagram footer__icon"></i
+                        ></a>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </header>
-
-    <main>
-        <div class="events">
-            <h1 class="events__title">Future Events</h1>
-            <section class="events__grid"></section>
-        </div>
-        <div class="booked">
-            <h1 class="booked__title">My Booked Events</h1>
-            <section class="booked__grid"></section>
-        </div>
-
-    </main>
-
-    <footer class="footer">
-        <hr />
-        <div class="container">
-            <div class="row">
-                <div class="col-12 d-flex justify-content-evenly">
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"
-                        aria-label="Open facebook in a new tab"><i class="fa-brands fa-facebook footer__icon"></i></a>
-                    <a href="https://x.com/" target="_blank" rel="noopener noreferrer"
-                        aria-label="Open twitter in a new tab"><i class="fa-brands fa-twitter footer__icon"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"
-                        aria-label="Open instagram in a new tab"><i class="fa-brands fa-instagram footer__icon"></i></a>
+            <hr />
+            <div class="container">
+                <div class="row justify-content-center mt-2">
+                    <div class="col-12 col-md-6 text-center mt-2">
+                        <p class="subheading">CONTACT</p>
+                        <p>Email: Eventura@email.com</p>
+                        <p>Phone: 020712345678</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <hr />
-        <div class="container">
-            <div class="row justify-content-center mt-2">
-                <div class="col-12 col-md-6 text-center mt-2">
-                    <p class="subheading">CONTACT</p>
-                    <p>Email: Eventura@email.com</p>
-                    <p>Phone: 020712345678</p>
-                </div>
-            </div>
-        </div>
-        <hr />
-        <p class="text-center">
-            &copy; 2025 Eventura. All rights reserved. Created by Alex,
-            James and Purbai
-        </p>
-    </footer>
-    <!-- Bootstrap import -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-    <!-- TS script -->
-    <script type="module" src="./../../scripts/bookings.ts"></script>
-</body>
-
+            <hr />
+            <p class="text-center">
+                &copy; 2025 Eventura. All rights reserved. Created by Alex,
+                James and Purbai
+            </p>
+        </footer>
+        <!-- Bootstrap import -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+            crossorigin="anonymous"
+        ></script>
+        <!-- TS script -->
+        <script type="module" src="./../../scripts/bookings.ts"></script>
+    </body>
 </html>
