--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -70,7 +70,7 @@
                                 <a
                                     class="navbar-nav__link"
                                     aria-current="page"
-                                    href="./../../pages/bookings/index.html"
+                                    href="./../bookings/index.html"
                                     >Bookings</a
                                 >
                             </li>
