fixing email created & organiser issue

--- a/frontend_eventura/src/pages/events/index.html
+++ b/frontend_eventura/src/pages/events/index.html
@@ -79,7 +79,9 @@
                   <input id="organiserEmail" class="form-control" type="email" required />
                 </div>
 
-              
+                <!-- Hidden CreatedBy email -->
+                <input id="createdByEmail" type="email" hidden />
+
                 <!-- Address (creates Address entity like signup) -->
                 <div class="border rounded p-3 mb-3">
                   <h2 class="h6 mb-3">Venue address</h2>
