re-fixed the navbar option from events to event planner

--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -48,7 +48,7 @@
                                    href="./../bookings/index.html">Bookings</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../events/index.html">Events</a>
+                            <a class="navbar-nav__link" aria-current="page" href="./../events/index.html">Event Planner</a>
                         </li>
                     </ul>
                 </div>
