--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -52,7 +52,7 @@
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link" aria-current="page"
-                                href="./src/pages/events/index.html">Events</a>
+                                href="./src/pages/events/index.html">Event Planner</a>
                         </li>
                     </ul>
                     <!-- </div> -->
