--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -47,7 +47,7 @@
                             <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Bookings</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../events/index.html">Events</a>
+                            <a class="navbar-nav__link" aria-current="page" href="./../events/index.html">Event Planner</a>
                         </li>
                     </ul>
                 </div>
