--- a/frontend_eventura/src/pages/profile/index.html
+++ b/frontend_eventura/src/pages/profile/index.html
@@ -48,7 +48,7 @@
                             <a class="navbar-nav__link" aria-current="page" href="./../bookings/index.html">Booking</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./../events/index.html">Events</a>
+                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./../events/index.html">Event Planner</a>
                         </li>
                     </ul>
                 </div>
