Style(frontend): Background image for all pages, adjusted fonts

--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -33,7 +33,6 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <!-- <div class="navbar-nav"> -->
                     <ul class="navbar-nav">
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Home</a>
@@ -55,13 +54,11 @@
                                 href="./src/pages/events/index.html">Event Planner</a>
                         </li>
                     </ul>
-                    <!-- </div> -->
                 </div>
             </div>
         </nav>
     </header>
-
-    <main>
+    <main class="h-100">
         <div class="events">
             <h1 class="events__title">Our upcoming Events</h1>
             <section class="">
