--- a/frontend_eventura/src/pages/login/index.html
+++ b/frontend_eventura/src/pages/login/index.html
@@ -56,7 +56,7 @@
         </nav>
     </header>
 
-    <main class="login">
+    <main class="login h-100">
         <!-- Sign in section -->
         <section class="p-5 w-100">
             <div>
