--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -56,9 +56,9 @@
         </nav>
     </header>
 
-    <main class="signup">
+    <main class="signup h-100 pb-5">
         <!-- Sign up section -->
-        <section class="w-100 mb-5">
+        <section class="w-100 pb-5">
             <div>
                 <h1 class="text-center">Sign up</h1>
             </div>
@@ -116,7 +116,7 @@
         </section>
     </main>
 
-    <footer class="footer pt-5">
+    <footer class="footer">
         <hr />
         <div class="container">
             <div class="row">
