changed the text on navbar from sign in to login

--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -38,7 +38,7 @@
                             <a class="navbar-nav__link" href="./../../../index.html">Home</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" href="./../login/index.html">Sign in</a>
+                            <a class="navbar-nav__link" href="./../login/index.html">Login</a>
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link" href="./../signup/index.html">Sign up</a>
