--- a/frontend_eventura/src/pages/events/index.html
+++ b/frontend_eventura/src/pages/events/index.html
@@ -39,7 +39,7 @@
                 <a class="navbar-nav__link" href="./../../../index.html">Home</a>
               </li>
               <li class="navbar-nav__list">
-                <a class="navbar-nav__link" href="./../../pages/login/index.html">Sign in</a>
+                <a class="navbar-nav__link" href="./../../pages/login/index.html">Login</a>
               </li>
               <li class="navbar-nav__list">
                 <a class="navbar-nav__link" href="./../../pages/signup/index.html">Sign up</a>
