--- a/frontend_eventura/src/pages/login/index.html
+++ b/frontend_eventura/src/pages/login/index.html
@@ -38,7 +38,7 @@
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link navbar-nav__link--active" aria-current="page"
-                                href="./index.html">Sign in</a>
+                                href="./index.html">Login</a>
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link" href="./../../pages/signup/index.html">Sign
