--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -37,8 +37,7 @@
                             <a class="navbar-nav__link" aria-current="page" href="./../../../index.html">Home</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../../pages/login/index.html">Sign
-                                in</a>
+                            <a class="navbar-nav__link" aria-current="page" href="./../../pages/login/index.html">Login</a>
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Sign up</a>
