Fix(frontend): Footer covering main content

--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -55,7 +55,7 @@
         </nav>
     </header>
 
-    <main class="h-100">
+    <main class="">
         <div class="events">
             <h1 class="events__title">Future Events</h1>
             <section class="">
