--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -56,7 +56,7 @@
         </nav>
     </header>
 
-    <main class="signup h-100 pb-5">
+    <main class="signup pb-5">
         <!-- Sign up section -->
         <section class="w-100 pb-5">
             <div>
