--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -58,7 +58,7 @@
             </div>
         </nav>
     </header>
-    <main class="h-100">
+    <main class="">
         <div class="events">
             <h1 class="events__title">Our upcoming Events</h1>
             <section class="">
