--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -24,9 +24,14 @@
 <body>
     <header>
         <!-- Bootstrap navbar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">Eventura Logo</a>
+                <div class="navbar__logo-container">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./public/eventura-logo.jpg"
+                            class="w-100 h-100" />
+                        </a>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -35,10 +40,12 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav">
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Home</a>
+                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page"
+                                href="./index.html">Home</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./src/pages/login/index.html">Login</a>
+                            <a class="navbar-nav__link" aria-current="page"
+                                href="./src/pages/login/index.html">Login</a>
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link" aria-current="page" href="./src/pages/signup/index.html">Sign
@@ -49,8 +56,8 @@
                                 href="./src/pages/bookings/index.html">Bookings</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page"
-                                href="./src/pages/events/index.html">Event Planner</a>
+                            <a class="navbar-nav__link" aria-current="page" href="./src/pages/events/index.html">Event
+                                Planner</a>
                         </li>
                     </ul>
                 </div>
