--- a/frontend_eventura/src/pages/events/index.html
+++ b/frontend_eventura/src/pages/events/index.html
@@ -1,213 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Create and manage events with Eventura." />
-    <title>Eventura | Events</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Eventura Logo</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav">
-              <li class="navbar-nav__list">
-                <a class="navbar-nav__link" href="./../../../index.html">Home</a>
-              </li>
-              <li class="navbar-nav__list">
-                <a class="navbar-nav__link" href="./../../pages/login/index.html">Login</a>
-              </li>
-              <li class="navbar-nav__list">
-                <a class="navbar-nav__link" href="./../../pages/signup/index.html">Sign up</a>
-              </li>
-              <li class="navbar-nav__list">
-                <a class="navbar-nav__link" href="./../../pages/bookings/index.html">Bookings</a>
-              </li>
-              <li class="navbar-nav__list">
-                <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Event Planner</a>
-              </li>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Create and manage events with Eventura." />
+  <title>Eventura | Events</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/d51c017cc6.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <div class="navbar__logo-container">
+          <a class="navbar-brand" href="../../../index.html">
+            <img src="../../../public/eventura-logo.jpg" class="w-100 h-100" />
+          </a>
         </div>
-      </nav>
-    </header>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <ul class="navbar-nav">
+            <li class="navbar-nav__list">
+              <a class="navbar-nav__link" href="./../../../index.html">Home</a>
+            </li>
+            <li class="navbar-nav__list">
+              <a class="navbar-nav__link" href="./../../pages/login/index.html">Login</a>
+            </li>
+            <li class="navbar-nav__list">
+              <a class="navbar-nav__link" href="./../../pages/signup/index.html">Sign up</a>
+            </li>
+            <li class="navbar-nav__list">
+              <a class="navbar-nav__link" href="./../../pages/bookings/index.html">Bookings</a>
+            </li>
+            <li class="navbar-nav__list">
+              <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Event
+                Planner</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <main class="px-5 pb-5">
-      <section class="row g-4">
-        <div class="col-12 col-lg-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <h1 class="h3 mb-3">Event planning</h1>
+  <main class="px-5 pb-5">
+    <section class="row g-4">
+      <div class="col-12 col-lg-6">
+        <div class="card h-100">
+          <div class="card-body">
+            <h1 class="h3 mb-3">Event planning</h1>
 
-              <form id="event-form" class="event-form">
+            <form id="event-form" class="event-form">
+              <div class="mb-3">
+                <label for="eventName" class="form-label">Event name</label>
+                <input id="eventName" class="form-control" type="text" required />
+              </div>
+
+              <div class="mb-3">
+                <label for="eventDescription" class="form-label">Description</label>
+                <textarea id="eventDescription" class="form-control" rows="3"></textarea>
+              </div>
+
+              <div class="mb-3">
+                <label for="organiserEmail" class="form-label">Organiser email</label>
+                <input id="organiserEmail" class="form-control" type="email" required />
+              </div>
+
+              <!-- Hidden CreatedBy email -->
+              <input id="createdByEmail" type="email" hidden />
+
+              <!-- Address (creates Address entity like signup) -->
+              <div class="border rounded p-3 mb-3">
+                <h2 class="h6 mb-3">Venue address</h2>
+
                 <div class="mb-3">
-                  <label for="eventName" class="form-label">Event name</label>
-                  <input id="eventName" class="form-control" type="text" required />
+                  <label for="addressline1" class="form-label">Address line 1</label>
+                  <input id="addressline1" class="form-control" type="text" />
                 </div>
 
                 <div class="mb-3">
-                  <label for="eventDescription" class="form-label">Description</label>
-                  <textarea id="eventDescription" class="form-control" rows="3"></textarea>
-                </div>
-
-                <div class="mb-3">
-                  <label for="organiserEmail" class="form-label">Organiser email</label>
-                  <input id="organiserEmail" class="form-control" type="email" required />
-                </div>
-
-                <!-- Hidden CreatedBy email -->
-                <input id="createdByEmail" type="email" hidden />
-
-                <!-- Address (creates Address entity like signup) -->
-                <div class="border rounded p-3 mb-3">
-                  <h2 class="h6 mb-3">Venue address</h2>
-
-                  <div class="mb-3">
-                    <label for="addressline1" class="form-label">Address line 1</label>
-                    <input id="addressline1" class="form-control" type="text" />
-                  </div>
-
-                  <div class="mb-3">
-                    <label for="addressline2" class="form-label">Address line 2 (optional)</label>
-                    <input id="addressline2" class="form-control" type="text" />
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-4 mb-3">
-                      <label for="city" class="form-label">City</label>
-                      <input id="city" class="form-control" type="text" />
-                    </div>
-                    <div class="col-md-4 mb-3">
-                      <label for="postcode" class="form-label">Postcode</label>
-                      <input id="postcode" class="form-control" type="text" />
-                    </div>
-                    <div class="col-md-4 mb-3">
-                      <label for="country" class="form-label">Country</label>
-                      <input id="country" class="form-control" type="text" />
-                    </div>
-                  </div>
-
-                  <div class="form-text">
-                    Leave all address fields empty if you prefer to use a simple display location instead.
-                  </div>
-                </div>
-
-                <!-- Optional free-text display location -->
-                <div class="mb-3">
-                  <label for="location" class="form-label">Location (display text, optional)</label>
-                  <input id="location" class="form-control" type="text" placeholder="e.g., 221B Baker St, London" />
+                  <label for="addressline2" class="form-label">Address line 2 (optional)</label>
+                  <input id="addressline2" class="form-control" type="text" />
                 </div>
 
                 <div class="row">
-                  <div class="col-md-6 mb-3">
-                    <label for="maxCapacity" class="form-label">Max spaces</label>
-                    <input id="maxCapacity" class="form-control" type="number" min="1" />
+                  <div class="col-md-4 mb-3">
+                    <label for="city" class="form-label">City</label>
+                    <input id="city" class="form-control" type="text" />
                   </div>
-                  <div class="col-md-6 mb-3">
-                    <label for="costPerPerson" class="form-label">Cost per person (£)</label>
-                    <input id="costPerPerson" class="form-control" type="number" step="0.01" min="0" />
+                  <div class="col-md-4 mb-3">
+                    <label for="postcode" class="form-label">Postcode</label>
+                    <input id="postcode" class="form-control" type="text" />
                   </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-md-6 mb-3">
-                    <label for="startDate" class="form-label">Start date/time</label>
-                    <input id="startDate" class="form-control" type="datetime-local" required />
-                  </div>
-                  <div class="col-md-6 mb-3">
-                    <label for="endDate" class="form-label">End date/time</label>
-                    <input id="endDate" class="form-control" type="datetime-local" required />
+                  <div class="col-md-4 mb-3">
+                    <label for="country" class="form-label">Country</label>
+                    <input id="country" class="form-control" type="text" />
                   </div>
                 </div>
 
-                <div class="mb-3">
-                  <label for="noOfEventDates" class="form-label"># of event dates</label>
-                  <input id="noOfEventDates" class="form-control" type="number" min="1" />
+                <div class="form-text">
+                  Leave all address fields empty if you prefer to use a simple display location instead.
                 </div>
+              </div>
 
-                <div class="d-flex gap-2">
-                  <button class="btn btn-primary" type="submit">Create event</button>
-                  <button class="btn btn-outline-secondary" type="reset" id="resetForm">Reset</button>
+              <!-- Optional free-text display location -->
+              <div class="mb-3">
+                <label for="location" class="form-label">Location (display text, optional)</label>
+                <input id="location" class="form-control" type="text" placeholder="e.g., 221B Baker St, London" />
+              </div>
+
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="maxCapacity" class="form-label">Max spaces</label>
+                  <input id="maxCapacity" class="form-control" type="number" min="1" />
                 </div>
-                <p class="mt-2 small" id="formMessage" aria-live="polite"></p>
-              </form>
-            </div>
-          </div>
-        </div>
+                <div class="col-md-6 mb-3">
+                  <label for="costPerPerson" class="form-label">Cost per person (£)</label>
+                  <input id="costPerPerson" class="form-control" type="number" step="0.01" min="0" />
+                </div>
+              </div>
 
-        <div class="col-12 col-lg-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <h2 class="h4 mb-3">All events</h2>
-              <div id="eventsList" class="d-grid gap-3"></div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="startDate" class="form-label">Start date/time</label>
+                  <input id="startDate" class="form-control" type="datetime-local" required />
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="endDate" class="form-label">End date/time</label>
+                  <input id="endDate" class="form-control" type="datetime-local" required />
+                </div>
+              </div>
 
-    <footer class="footer mt-5">
-      <hr />
-      <div class="container">
-        <div class="row">
-          <div class="col-12 d-flex justify-content-evenly">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Open facebook in a new tab">
-              <i class="fa-brands fa-facebook footer__icon"></i>
-            </a>
-            <a href="https://x.com/" target="_blank" rel="noopener noreferrer" aria-label="Open twitter in a new tab">
-              <i class="fa-brands fa-twitter footer__icon"></i>
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Open instagram in a new tab">
-              <i class="fa-brands fa-instagram footer__icon"></i>
-            </a>
+              <div class="mb-3">
+                <label for="noOfEventDates" class="form-label"># of event dates</label>
+                <input id="noOfEventDates" class="form-control" type="number" min="1" />
+              </div>
+
+              <div class="d-flex gap-2">
+                <button class="btn btn-primary" type="submit">Create event</button>
+                <button class="btn btn-outline-secondary" type="reset" id="resetForm">Reset</button>
+              </div>
+              <p class="mt-2 small" id="formMessage" aria-live="polite"></p>
+            </form>
           </div>
         </div>
       </div>
-      <hr />
-      <div class="container">
-        <div class="row justify-content-center mt-2">
-          <div class="col-12 col-md-6 text-center mt-2">
-            <p class="subheading">CONTACT</p>
-            <p>Email: Eventura@email.com</p>
-            <p>Phone: 020712345678</p>
+
+      <div class="col-12 col-lg-6">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="h4 mb-3">All events</h2>
+            <div id="eventsList" class="d-grid gap-3"></div>
           </div>
         </div>
       </div>
-      <hr />
-      <p class="text-center">&copy; 2025 Eventura. All rights reserved. Created by Alex, James and Purbai</p>
-    </footer>
+    </section>
+  </main>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
+  <footer class="footer mt-5">
+    <hr />
+    <div class="container">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-evenly">
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"
+            aria-label="Open facebook in a new tab">
+            <i class="fa-brands fa-facebook footer__icon"></i>
+          </a>
+          <a href="https://x.com/" target="_blank" rel="noopener noreferrer" aria-label="Open twitter in a new tab">
+            <i class="fa-brands fa-twitter footer__icon"></i>
+          </a>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"
+            aria-label="Open instagram in a new tab">
+            <i class="fa-brands fa-instagram footer__icon"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <div class="container">
+      <div class="row justify-content-center mt-2">
+        <div class="col-12 col-md-6 text-center mt-2">
+          <p class="subheading">CONTACT</p>
+          <p>Email: Eventura@email.com</p>
+          <p>Phone: 020712345678</p>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <p class="text-center">&copy; 2025 Eventura. All rights reserved. Created by Alex, James and Purbai</p>
+  </footer>
 
-    <!-- TS entry (Vite) -->
-    <script type="module" src="./../../scripts/events.ts"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
+
+  <!-- TS entry (Vite) -->
+  <script type="module" src="./../../scripts/events.ts"></script>
+</body>
+
 </html>
