--- a/frontend_eventura/src/pages/login/index.html
+++ b/frontend_eventura/src/pages/login/index.html
@@ -23,9 +23,13 @@
 <body>
     <header>
         <!-- Bootstrap navbar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">Eventura Logo</a>
+                <div class="navbar__logo-container">
+                    <a class="navbar-brand" href="../../../index.html">
+                        <img src="../../../public/eventura-logo.jpg" class="w-100 h-100" />
+                    </a>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
